# claude-config

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pyproject.toml  repomix.md  settings.glm.json  settings.json  statusline.py  wrangler.jsonc
agents/: atomic-commits.md  doc-specialist.md  gemini-task-runner.md  haiku-coder.md  hook-development-expert.md  output-style-generator.md  research-specialist.md  skill-generator.md  slash-command-generator.md  subagent-generator.md  workflow-orchestrator.md
commands/: orchestrate.md  prime.md  research.md
commands/claude/: create-workflow.md  hooks.md  slash-commands.md
commands/docs/: consolidate.md  create.md  research.md  update.md
commands/git/: commit-push.md  commit.md  sync.md
docs/: hooks.md  mcp.md  models.md
hooks/: code_quality  code_quality.py  code_quality_typecheck.py  duplicate_process_blocker  duplicate_process_blocker.py  formatter  post_tool_use_tracker  post_tool_use_tracker.sh  sound_mappings.json
hooks/utils/: sound_manager.py
skills/coding-research-specialist/: README.md  SKILL.md  config.json  research_interface.py  research_system.py
skills/hook-creation/: CHEAT_SHEET.md  REFERENCE.md  SKILL.md
skills/managing-secrets-varlock/: SKILL.md
skills/workflow-creation/: SKILL.md  output-styles-reference.md  prompting-guidelines.md  skills-reference.md  slash-commands-reference.md  subagents-reference.md
tests/: README.md  config_validator.py  conftest.py  test_error_handling.py  test_hook_handlers.py  test_pattern_matching.py  test_post_tool_use_tracker.py  test_sound_manager.py
(+59 files in other folders)
